# cs-9223-assignment-1

./: .gitignore  .pre-commit-config.yaml  CODEOWNERS  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  artifact.md  checkpoint.json  cosign.bundle  cyclonedx-sbom.json  main.py  merkle_proof.py  pyproject.toml  requirements.txt  sbom-attestation.json  util.py
.github/workflows/: cd.yml  ci.yml  scorecard.yml
assignment2/: bandit.final.txt  bandit.initial.txt  pylint.final.txt  pylint.initial.txt
src/rekor_log_verifier/: main.py  util.py
static_analysis/: bandit.final.txt  pylint.final.txt  ruff.final.txt  ruff.initial.txt
tests/: test_main.py  test_merkle_proof.py  test_util.py
