[project]
name = "cs-9223-assignment-1"
version = "0.1.0"
description = "A Python tool for verifying entries in the Sigstore Rekor transparency log"
authors = [
    {name = "ssannkkallpp",email = "ssannkkallpp@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9,<3.13"
dependencies = [
    "sigstore>=3.6.5",
    "cryptography>=41.0.0",
    "requests>=2.28.0"
]

[dependency-groups]
dev = [
    "ruff>=0.14.0",
    "pylint>=3.3.0,<4.0.0",
    "mypy>=1.18.2",
    "bandit>=1.8.6"
]


[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
